--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <modules>
-        <module>book-quickstart</module>
-    </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -18,10 +13,17 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-boot-learning</name>
     <description>spring-boot-learning</description>
+    <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
     <properties>
         <java.version>17</java.version>
     </properties>
+
+    <modules>
+        <module>book-quickstart</module>
+        <module>boot-restful</module>
+    </modules>
 
     <dependencies>
         <dependency>
@@ -32,6 +34,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
         </dependency>
     </dependencies>
 
