--- a/boot-restful/pom.xml
+++ b/boot-restful/pom.xml
@@ -11,9 +11,12 @@
 
     <artifactId>boot-restful</artifactId>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.6</version>
+        </dependency>
+    </dependencies>
 
 </project>
