--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,12 @@
 
     <properties>
         <java.version>17</java.version>
+        <skipTests>true</skipTests>
     </properties>
-
     <modules>
         <module>book-quickstart</module>
         <module>boot-restful</module>
+        <module>boot-config</module>
     </modules>
 
     <dependencies>
