JPA创建、更新时间配置、关键字

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>book-quickstart</module>
         <module>boot-restful</module>
         <module>boot-config</module>
+        <module>boot-orm</module>
     </modules>
 
     <dependencies>
