--- a/boot-resource-template/pom.xml
+++ b/boot-resource-template/pom.xml
@@ -28,6 +28,14 @@
             <artifactId>webjars-locator</artifactId>
             <version>0.45</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
