--- a/boot-orm/pom.xml
+++ b/boot-orm/pom.xml
@@ -33,7 +33,10 @@
             <artifactId>dozer-spring-boot-starter</artifactId>
             <version>6.5.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
