--- a/boot-tomcat/pom.xml
+++ b/boot-tomcat/pom.xml
@@ -11,6 +11,11 @@
 
     <artifactId>boot-tomcat</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
