分布式文件服务

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>boot-exception</module>
         <module>boot-log</module>
         <module>boot-task</module>
+        <module>boot-file</module>
     </modules>
 
     <dependencies>
